// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render MoviesList with Show more button 1`] = `
Array [
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      data-key={7}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/war-of-the-worlds.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/7"
          onClick={[Function]}
        >
          War of the worlds
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      data-key={8}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/war-of-the-worlds.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/8"
          onClick={[Function]}
        >
          War of the worlds
        </a>
      </h3>
    </article>
  </div>,
  "",
]
`;

exports[`Render MoviesList without Show more button 1`] = `
Array [
  <div
    className="catalog__movies-list"
  >
    <article
      className="small-movie-card catalog__movies-card"
      data-key={0}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/aviator.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/0"
          onClick={[Function]}
        >
          Aviator
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      data-key={1}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/bohemian-rhapsody.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/1"
          onClick={[Function]}
        >
          Bohemian rhapsody
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      data-key={2}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/johnny-english.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/2"
          onClick={[Function]}
        >
          Johnny english
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      data-key={3}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/moonrise-kingdom.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/3"
          onClick={[Function]}
        >
          Moonrise kingdom
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      data-key={4}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/no-country-for-old-men.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/4"
          onClick={[Function]}
        >
          No country for old men
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      data-key={5}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/orlando.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/5"
          onClick={[Function]}
        >
          Orlando
        </a>
      </h3>
    </article>
    <article
      className="small-movie-card catalog__movies-card"
      data-key={6}
    >
      <div
        className="small-movie-card__image"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <video
          className="player__video"
          poster="img/pulp-fiction.jpg"
          preload="metadata"
        />
      </div>
      <h3
        className="small-movie-card__title"
      >
        <a
          className="small-movie-card__link"
          href="/films/6"
          onClick={[Function]}
        >
          Pulp fiction
        </a>
      </h3>
    </article>
  </div>,
  "",
]
`;
